--- a/styles/global.css
+++ b/styles/global.css
@@ -50,7 +50,20 @@ html, body, #root {
   color: var(--text-light);
 }
 
-body {
+body, html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.container {
+  width: 100%;
+  max-width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
+
+
+body {  
   background-color: var(--background-dark);
   color: var(--text-light);
   min-height: 100vh;
