feat: Adicionar exibição do autor da transação na lista de transações

--- a/src/pages/Transaction/TransactionsList.css
+++ b/src/pages/Transaction/TransactionsList.css
@@ -290,6 +290,11 @@
   }
 }
 
+.transaction-line .author {
+  font-style: italic;
+  margin-top: 2px;
+  color: var(--text-muted);
+}
 
 
 @media (max-width: 576px) {
